--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
    <body>
    	<h1>List of Activities</h1>
    	<ul>
-    {% for activity in activities %}
+    {% for activity in activities if activity.start_latitude %}
       <li>{{ activity.name }}: {{activity.start_latitude}}, {{activity.start_longitude}}</li>
     {% endfor %}
 	</ul>
