--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,18 @@
 <!doctype html>
 <html>
    <body>
-   	<h1>List of Activities</h1>
-   	<h2>{{message}}</h2>
+   	<h1>Where Matt has run:</h1>
+   	<h2>U.S. States</h2>
    	<ul>
-    {% for activity in activities if activity.latitude %}
-      <li>{{ activity.strava_activity_name }}: {{activity.latitude}}, {{activity.longitude}}</li>
+    {% for state in states %}
+      <li>{{ state }}</li>
+    {% endfor %}
+	</ul>
+
+	<h2>Countries</h2>
+	<ul>
+	{% for country in countries %}
+      <li>{{ country }}</li>
     {% endfor %}
 	</ul>
    </body>
