--- a/templates/main.html
+++ b/templates/main.html
@@ -3,17 +3,15 @@
    <body>
    	<h1>Where Matt has run:</h1>
    	<h2>U.S. States</h2>
-   	<ul>
-    {% for state in states %}
-      <li>{{ state }}</li>
-    {% endfor %}
+   	<ul>{% for place in places|unique(attribute="state_short") %}
+      {% if place.country_short == "US"%}
+      <li><a href="/state/{{place.state_short}}">{{ place.state_long }}</a></li>{% endif %}{% endfor %}
+
 	</ul>
 
 	<h2>Countries</h2>
-	<ul>
-	{% for country in countries %}
-      <li>{{ country }}</li>
-    {% endfor %}
+	<ul>{% for place in places|unique(attribute="country_short") %}
+      <li><a href="/country/{{place.country_short}}">{{ place.country_long }}</a></li>{% endfor %}
 	</ul>
    </body>
 </html>
