add distance and date to place pages

--- a/templates/place.html
+++ b/templates/place.html
@@ -3,7 +3,7 @@
    <body>
    	<h1>Matt's runs in {{place}}</h1>
    	<ul>{% for activity in activities %}
-      <li><a href="https://www.strava.com/activities/{{activity.strava_activity_id}}">{{ activity.strava_activity_name }}</a></li>{% endfor %}
+      <li><a href="https://www.strava.com/activities/{{activity.strava_activity_id}}">{{ activity.strava_activity_name }}</a> {{ (activity.distance * 0.00062137)|round(1) }} miles on {{ activity.start_date }}</li>{% endfor %}
 	</ul>
    </body>
 </html>
