--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+  <title>Where Matt has run</title>
    <body bgcolor="#D3D3D3">
    	<h1>Where Matt has run:</h1>
    	<h2>U.S. States and Territories</h2>
