add state and country totals to headers

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,14 +3,14 @@
   <title>Where Matt has run</title>
    <body bgcolor="#D3D3D3">
    	<h1>Where Matt has run:</h1>
-   	<h2>U.S. States and Territories</h2>
+   	<h2>U.S. States and Territories - {{ state_count }} total</h2>
    	<ul>{% for place in places|unique(attribute="state_short")|sort(attribute="state_long") %}
       {% if place.country_short == "US"%}
       <li><a href="/state/{{place.state_short}}">{{ place.state_long }}</a></li>{% endif %}{% endfor %}
 
 	</ul>
 
-	<h2>Countries</h2>
+	<h2>Countries - {{ country_count }} total</h2>
 	<ul>{% for place in places|unique(attribute="country_short")|sort(attribute="country_long") %}
       <li><a href="/country/{{place.country_short}}">{{ place.country_long }}</a></li>{% endfor %}
 	</ul>
