--- a/templates/year.html
+++ b/templates/year.html
@@ -1,5 +1,14 @@
 <!doctype html>
 <html>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <style>
+    body {
+      font-family:Roboto;
+    }
+    </style>
+    <title>Where Matt has run</title>
+  </head>
    <body bgcolor="#D3D3D3">
    	<h1>Matt's runs in {{year}}</h1>
    	<p><i>This data excludes indoor runs.</i></p>
