Add activity viewer

--- a/templates/setup.html
+++ b/templates/setup.html
@@ -11,6 +11,7 @@
    	<form action="/setup" method="post">
       <input type="checkbox" name="action" value="strava"> Download Strava Activities<br>
       <input type="checkbox" name="action" value="geocode"> Reverse Geocode Activities<br>
+      <input type="checkbox" name="action" value="view_activity"> View activity by ID: <input type="text" name="strava_id" value=""><br>
       Password:
       <input type="password" name="psw">
       <input type="submit" value="Update">
