--- a/templates/setup.html
+++ b/templates/setup.html
@@ -12,6 +12,7 @@
       <input type="checkbox" name="action" value="strava"> Download Strava Activities<br>
       <input type="checkbox" name="action" value="geocode"> Reverse Geocode Activities<br>
       <input type="checkbox" name="action" value="view_activity"> View activity by ID: <input type="text" name="strava_id" value=""><br>
+      <input type="checkbox" name="action" value="authorize"> Strava token refresh<br>
       Password:
       <input type="password" name="psw">
       <input type="submit" value="Update">
